--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="settings_location">Location</string>
     <string name="settings_location_default_val" traslatable="false">94043</string>
     <string name="settings_location_key" translatable="false">location</string>
+    <string name="settings_temperature_key">temperature</string>
+    <string name="settings_temperature">Temperature</string>
+    <string name="settings_temperature_default_val">metric</string>
 </resources>
