added menu option of location map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="settings_temperature_key" translatable="false">temperature</string>
     <string name="settings_temperature">Temperature</string>
     <string name="settings_temperature_default_val" translatable="false">metric</string>
+    <string name="map_location">Map Location</string>
 </resources>
