--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,15 @@
 <resources>
     <string name="app_name">Sunshine</string>
-    <string name="hello_world">Hello world!</string>
     <string name="settings">Settings</string>
     <string name="title_activity_detail">DetailActivity</string>
-    <string name="settings_location">Location</string>
-    <string name="settings_location_default_val" traslatable="false">94043</string>
-    <string name="settings_location_key" translatable="false">location</string>
-    <string name="settings_temperature_key" translatable="false">temperature</string>
-    <string name="settings_temperature">Temperature</string>
-    <string name="settings_temperature_default_val" translatable="false">metric</string>
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_key" translatable="false">location</string>
+    <string name="pref_location_default" traslatable="false">94043</string>
+    <string name="pref_units_key" translatable="false">units</string>
+    <string name="pref_units_label">Temperature Units</string>
+    <string name="pref_units_label_metric">Metric</string>
+    <string name="pref_units_label_imperial">Imperial</string>
+    <string name="pref_units_metric" translatable="false">metric</string>
+    <string name="pref_units_imperial" translatable="false">imperial</string>
     <string name="map_location">Map Location</string>
 </resources>
