--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
     <string name="app_name">Sunshine</string>
     <string name="settings">Settings</string>
     <string name="title_activity_detail">DetailActivity</string>
@@ -12,4 +12,9 @@
     <string name="pref_units_metric" translatable="false">metric</string>
     <string name="pref_units_imperial" translatable="false">imperial</string>
     <string name="map_location">Map Location</string>
+    <string name="today">Today</string>
+    <string name="format_full_friendly_date">
+        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
+    </string>
+    <string name="tomorrow">Tomorrow</string>
 </resources>
