--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
     <string name="wind">Wind: <xliff:g id="wind">%1$s</xliff:g> km/H</string>
     <string name="pressure">Pressure: <xliff:g id="pressure">%1$s</xliff:g> hPa</string>
+    <!-- Account type (for sync-adapter authenticator) -->
+    <!-- SyncAdapter related -->
+    <string name="sync_account_type">sunshine.example.com</string>
+    <string name="content_authority">com.example.android.sunshine.app</string>
 </resources>
